--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.br</groupId>
 	<artifactId>erudio</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.2</version>
 	<name>erudio</name>
 	<description>Projeto com Spring Boot</description>
 	<properties>
